--- a/meta-pkgs/mate/Makefile
+++ b/meta-pkgs/mate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2017/06/27 16:16:04 jperkin Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/27 16:17:09 jperkin Exp $
 
 MAINTAINER=	youri@NetBSD.org
 HOMEPAGE=	http://www.mate-desktop.org/
@@ -17,7 +17,7 @@ DEPENDS+=	atril>=${VERSION}:../../print/atril
 DEPENDS+=	caja>=${VERSION}:../../sysutils/caja
 DEPENDS+=	caja-dropbox>=${VERSION}:../../sysutils/caja-dropbox
 DEPENDS+=	caja-extensions>=${VERSION}:../../sysutils/caja-extensions
-DEPENDS+=	engrampa>=${VIRSION}:../../archivers/engrampa
+DEPENDS+=	engrampa>=${VERSION}:../../archivers/engrampa
 DEPENDS+=	eom>=${VERSION}:../../graphics/eom
 DEPENDS+=	libmatekbd>=${VERSION}:../../x11/libmatekbd
 DEPENDS+=	libmateweather>=${VERSION}:../../misc/libmateweather
