--- a/devel/boost-headers/Makefile
+++ b/devel/boost-headers/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.40 2017/05/29 14:39:28 ryoon Exp $
+# $NetBSD: Makefile,v 1.41 2017/06/27 20:08:59 joerg Exp $
 
-PKGREVISION=		1
+PKGREVISION=		2
 BOOST_PACKAGE=		headers
 BOOST_COMMENT=		(build-time headers)
 BOOST_CONFIG=		generate
