--- a/devel/tex-l3packages-doc/Makefile
+++ b/devel/tex-l3packages-doc/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2017/06/21 08:28:42 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/27 21:35:27 minskim Exp $
 
 DISTNAME=	l3packages.doc
 PKGNAME=	tex-${DISTNAME:S/./-/}-2017
+PKGREVISION=	1
 TEXLIVE_REV=	44483
 
 MAINTAINER=	minskim@NetBSD.org
