--- a/print/tex-babel-doc/Makefile
+++ b/print/tex-babel-doc/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2017/06/20 21:01:16 markd Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/27 21:45:47 minskim Exp $
 
 DISTNAME=	babel.doc
 PKGNAME=	tex-${DISTNAME:S/./-/}-3.10
+PKGREVISION=	1
 TEXLIVE_REV=	44427
 
 MAINTAINER=	minskim@NetBSD.org
