--- a/x11/gnome-desktop-sharp/Makefile
+++ b/x11/gnome-desktop-sharp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.69 2017/04/22 21:03:19 adam Exp $
+# $NetBSD: Makefile,v 1.70 2017/06/28 08:14:32 jperkin Exp $
 #
 
 DISTNAME=	gnome-desktop-sharp-2.26.0
@@ -48,6 +48,6 @@ BUILDLINK_API_DEPENDS.gtk-sharp+=	gtk-sharp>=2.12.2
 .include "../../x11/gtk-sharp/buildlink3.mk"
 BUILDLINK_API_DEPENDS.gtksourceview2+=	gtksourceview2>=2.2.2
 .include "../../x11/gtksourceview2/buildlink3.mk"
-BUILDLINK_API_DEPENDS.vte+=		vte>=0.16.14
+BUILDLINK_API_DEPENDS.vte+=		vte>=0.16.14<0.32
 .include "../../x11/vte/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
