--- a/x11/py-vte/Makefile
+++ b/x11/py-vte/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.29 2017/02/12 06:24:57 ryoon Exp $
+# $NetBSD: Makefile,v 1.30 2017/06/28 08:15:17 jperkin Exp $
 
 .include "../../x11/vte/Makefile.common"
 
@@ -28,7 +28,7 @@ pre-build:
 	${LN} -s ${BUILDLINK_DIR}/lib/libvte.la ${WRKSRC}/src/libvte.la
 
 .include "../../x11/py-gtk2/buildlink3.mk"
-BUILDLINK_API_DEPENDS.vte+=	vte>=${PKGVERSION_NOREV}
+BUILDLINK_API_DEPENDS.vte+=	vte>=${PKGVERSION_NOREV}<0.32
 .include "../../x11/vte/buildlink3.mk"
 PY_PATCHPLIST=	yes
 .include "../../lang/python/extension.mk"
