--- a/www/p5-Catalyst-Plugin-Authentication/Makefile
+++ b/www/p5-Catalyst-Plugin-Authentication/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2017/06/05 14:25:13 ryoon Exp $
+# $NetBSD: Makefile,v 1.26 2017/06/28 08:16:58 jperkin Exp $
 
 DISTNAME=	Catalyst-Plugin-Authentication-0.10023
 PKGNAME=	p5-${DISTNAME}0
@@ -26,6 +26,8 @@ BUILD_DEPENDS+= p5-Test-WWW-Mechanize-Catalyst>=0.50:../../www/p5-Test-WWW-Mecha
 #PERL5_MODULE_TYPE=	Module::Install::Bundled
 MAKE_PARAMS+=	--skipdeps
 PERL5_PACKLIST= auto/Catalyst/Plugin/Authentication/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
