--- a/databases/p5-DBIx-Class-Validation/Makefile
+++ b/databases/p5-DBIx-Class-Validation/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2017/06/05 14:22:28 ryoon Exp $
+# $NetBSD: Makefile,v 1.16 2017/06/28 13:24:28 jperkin Exp $
 
 DISTNAME=	DBIx-Class-Validation-0.02005
 PKGNAME=	p5-${DISTNAME}
@@ -21,6 +21,8 @@ BUILD_DEPENDS+=	p5-DateTime-Format-SQLite-[0-9]*:../../time/p5-DateTime-Format-S
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/DBIx/Class/Validation/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
