--- a/devel/p5-accessors-fast/Makefile
+++ b/devel/p5-accessors-fast/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2017/06/05 14:23:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.8 2017/06/28 13:24:29 jperkin Exp $
 #
 
 DISTNAME=	accessors-fast-0.03
@@ -20,6 +20,8 @@ DEPENDS+=	p5-constant-def>=0.01:../../devel/p5-constant-def
 BUILD_DEPENDS+=	p5-lib-abs>=0.90:../../devel/p5-lib-abs
 
 REPLACE_PERL+=	cpants.pl
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
