--- a/net/p5-FusionInventory-Agent-Task-Network/Makefile
+++ b/net/p5-FusionInventory-Agent-Task-Network/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2017/06/05 14:24:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.8 2017/06/28 13:24:29 jperkin Exp $
 #
 
 DISTNAME=	FusionInventory-Agent-Task-Network-1.0.2
@@ -21,6 +21,8 @@ PERL5_MODULE_TYPE=	Module::Install::Bundled
 
 PERL5_PACKLIST= auto/FusionInventory/Agent/Task/Network/.packlist
 MAKE_PARAMS+=	PREFIX=${PREFIX}
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
