--- a/time/p5-MooseX-Types-DateTimeX/Makefile
+++ b/time/p5-MooseX-Types-DateTimeX/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2017/06/05 14:25:05 ryoon Exp $
+# $NetBSD: Makefile,v 1.15 2017/06/28 13:24:29 jperkin Exp $
 #
 
 DISTNAME=	MooseX-Types-DateTimeX-0.10
@@ -25,6 +25,8 @@ BUILD_DEPENDS+=	p5-Test-Simple>=1.001010:../../devel/p5-Test-Simple
 USE_LANGUAGES=		# empty
 PERL5_PACKLIST=		auto/MooseX/Types/DateTimeX/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
