--- a/www/p5-Catalyst-Authentication-Credential-HTTP/Makefile
+++ b/www/p5-Catalyst-Authentication-Credential-HTTP/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:25:12 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/28 13:24:28 jperkin Exp $
 
 DISTNAME=	Catalyst-Authentication-Credential-HTTP-1.016
 PKGNAME=	p5-${DISTNAME}
@@ -25,6 +25,8 @@ BUILD_DEPENDS+=	p5-Test-MockObject-[0-9]*:../../devel/p5-Test-MockObject
 
 PERL5_PACKLIST= 	auto/Catalyst/Authentication/Credential/HTTP/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
