--- a/www/p5-Catalyst-Authentication-Store-Htpasswd/Makefile
+++ b/www/p5-Catalyst-Authentication-Store-Htpasswd/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:25:12 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/28 13:24:28 jperkin Exp $
 
 DISTNAME=	Catalyst-Authentication-Store-Htpasswd-1.004
 PKGNAME=	p5-${DISTNAME}
@@ -24,6 +24,8 @@ REPLACE_PERL+=	lib/Catalyst/Authentication/Store/Htpasswd/*.pm
 
 PERL5_PACKLIST= 	auto/Catalyst/Authentication/Store/Htpasswd/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
