--- a/www/p5-Catalyst-Plugin-Authorization-Roles/Makefile
+++ b/www/p5-Catalyst-Plugin-Authorization-Roles/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2017/06/05 14:25:13 ryoon Exp $
+# $NetBSD: Makefile,v 1.17 2017/06/28 13:24:28 jperkin Exp $
 
 DISTNAME=	Catalyst-Plugin-Authorization-Roles-0.09
 PKGNAME=	p5-${DISTNAME}
@@ -22,6 +22,8 @@ BUILD_DEPENDS+=	p5-Test-Exception>=0:../../devel/p5-Test-Exception
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/Catalyst/Plugin/Authorization/Roles/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
