--- a/www/p5-Kwiki-UserName/Makefile
+++ b/www/p5-Kwiki-UserName/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2017/06/05 14:25:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.21 2017/06/28 13:24:28 jperkin Exp $
 
 DISTNAME=	Kwiki-UserName-0.14
 PKGNAME=	p5-${DISTNAME}
@@ -14,6 +14,8 @@ DEPENDS+=	p5-Kwiki>=0.37nb1:../../www/p5-Kwiki
 DEPENDS+=	p5-Kwiki-UserPreferences>=0.13:../../www/p5-Kwiki-UserPreferences
 
 PERL5_PACKLIST=		auto/Kwiki/UserName/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
