--- a/www/p5-Kwiki-Weather/Makefile
+++ b/www/p5-Kwiki-Weather/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2017/06/05 14:25:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.16 2017/06/28 13:24:29 jperkin Exp $
 
 DISTNAME=	Kwiki-Weather-0.05
 PKGNAME=	p5-${DISTNAME}
@@ -15,6 +15,8 @@ DEPENDS+=	p5-Geo-Weather>=1.41:../../geography/p5-Geo-Weather
 DEPENDS+=	p5-Kwiki-Zipcode>=0.12:../../www/p5-Kwiki-Zipcode
 
 PERL5_PACKLIST=		auto/Kwiki/Weather/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
