--- a/multimedia/libvpx/Makefile
+++ b/multimedia/libvpx/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.70 2017/06/13 17:32:07 joerg Exp $
+# $NetBSD: Makefile,v 1.71 2017/06/28 15:35:48 he Exp $
 
 DISTNAME=	libvpx-1.6.1
+PKGREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	${MASTER_SITE_GITHUB:=webmproject/}
 GITHUB_PROJECT=	libvpx
