--- a/games/openttd/Makefile
+++ b/games/openttd/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.66 2017/04/22 21:03:36 adam Exp $
+# $NetBSD: Makefile,v 1.67 2017/06/28 18:18:36 adam Exp $
 
-DISTNAME=	openttd-1.6.1-source
+DISTNAME=	openttd-1.7.1-source
 PKGNAME=	${DISTNAME:S/-source//}
-PKGREVISION=	1
 CATEGORIES=	games x11
 MASTER_SITES=	http://binaries.openttd.org/releases/${PKGVERSION_NOREV}/
 EXTRACT_SUFX=	.tar.xz
@@ -32,6 +31,7 @@ CONFIGURE_ARGS+=	--shared-dir=${VARBASE}/games/openttd
 # Hack: built-in xz does not provide liblzma.pc, needed to configure
 PREFER_PKGSRC+=		xz
 
+CONFIGURE_ARGS+=	--with-iconv
 CONFIGURE_ARGS+=	--with-lzo2=${BUILDLINK_PREFIX.lzo}/lib
 
 .include "../../mk/bsd.prefs.mk"
@@ -49,6 +49,7 @@ CONFIGURE_ARGS+=	--without-osx-sysroot
 
 .include "../../archivers/lzo/buildlink3.mk"
 .include "../../archivers/xz/buildlink3.mk"
+.include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../fonts/fontconfig/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
