--- a/editors/pluma/Makefile
+++ b/editors/pluma/Makefile
@@ -1,5 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2017/06/23 17:32:16 youri Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/29 11:10:18 jperkin Exp $
 
+# XXX: meta-pkgs/mate/Makefile.common includes pyversion.mk which sets the
+# python version too early and clashes with PYTHON_VERSIONS_INCOMPATIBLE
+# from libpeas bl3, so we include it early to ensure a valid version is
+# chosen.  This is not ideal, please fix it properly at some point.
+.include "../../devel/libpeas/buildlink3.mk"
 .include "../../meta-pkgs/mate/Makefile.common"
 
 DISTNAME=	pluma-${VERSION:R}.2
@@ -18,7 +23,6 @@ CONFIGURE_ARGS+=	--disable-updater # only for OS X and Windows
 
 .include "../../devel/glib2/schemas.mk"
 
-.include "../../devel/libpeas/buildlink3.mk"
 .include "../../x11/mate-desktop/buildlink3.mk"
 .include "../../x11/gtksourceview3/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
