--- a/net/libcares/Makefile
+++ b/net/libcares/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2017/06/20 07:48:50 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2017/07/01 12:06:47 jperkin Exp $
 
 DISTNAME=	c-ares-1.13.0
 PKGNAME=	${DISTNAME:S/c-/libc/1}
@@ -17,6 +17,6 @@ USE_TOOLS+=	automake
 PKGCONFIG_OVERRIDE+=	libcares.pc.in
 
 pre-configure:
-	cd ${WRKSRC} && automake
+	cd ${WRKSRC} && autoreconf -fiv
 
 .include "../../mk/bsd.pkg.mk"
