--- a/graphics/blender/Makefile
+++ b/graphics/blender/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.132 2017/05/03 08:38:42 jperkin Exp $
+# $NetBSD: Makefile,v 1.133 2017/07/01 22:12:13 joerg Exp $
 
 DISTNAME=	blender-2.77a
 PKGREVISION=	6
@@ -50,7 +50,9 @@ INSTALLATION_DIRS=	bin share/blender
 PLIST_SUBST+=	PYVERSSUFFIX=${PYVERSSUFFIX}
 PLIST_SUBST+=	BLENDERVER=${PKGVERSION_NOREV:C/[a-z]//}
 
-.if !empty(MACHINE_PLATFORM:MNetBSD-7.*)
+.if !empty(MACHINE_PLATFORM:MNetBSD-8.*)
+PLIST_SUBST+=	NETBSDVER=netbsd8
+.elif !empty(MACHINE_PLATFORM:MNetBSD-7.*)
 PLIST_SUBST+=	NETBSDVER=netbsd7
 .else
 PLIST_SUBST+=	NETBSDVER=netbsd6
