--- a/www/py-websockets/Makefile
+++ b/www/py-websockets/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2017/06/24 07:30:18 adam Exp $
+# $NetBSD: Makefile,v 1.2 2017/07/01 22:13:55 joerg Exp $
 
 DISTNAME=	websockets-3.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -13,4 +13,11 @@ LICENSE=	modified-bsd
 PYTHON_VERSIONS_ACCEPTED=	36 35 34
 
 .include "../../lang/python/egg.mk"
+
+PLIST_VARS+=	py35p
+
+.if empty(_PYTHON_VERSION:M34*)
+PLIST.py35p=				yes
+.endif
+
 .include "../../mk/bsd.pkg.mk"
