--- a/databases/mariadb55-server/Makefile
+++ b/databases/mariadb55-server/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2016/09/13 19:15:14 maya Exp $
+# $NetBSD: Makefile,v 1.5 2017/07/01 23:57:46 schmonz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
+PKGREVISION=	1
 COMMENT=	MariaDB 5.5, a free SQL database (server)
 
 CONFLICTS=	mysql3-server-[0-9]*
