--- a/games/xpuyopuyo/Makefile
+++ b/games/xpuyopuyo/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.46 2017/01/19 18:52:11 agc Exp $
+# $NetBSD: Makefile,v 1.47 2017/07/02 00:58:17 seb Exp $
 
 DISTNAME=		xpuyopuyo-0.9.1
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		games x11
 MASTER_SITES=		http://chaos2.org/xpuyopuyo/
 MASTER_SITES+=		http://lenin.dabney.caltech.edu./~justins/xpuyopuyo/
