--- a/x11/mate-terminal/Makefile
+++ b/x11/mate-terminal/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2019/01/16 18:16:29 youri Exp $
+# $NetBSD: Makefile,v 1.14 2019/03/06 07:51:05 gutteridge Exp $
 
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	mate-terminal-${VERSION:R}.1
+DISTNAME=	mate-terminal-${VERSION}
 CATEGORIES=	x11
 
 COMMENT=	MATE terminal emulator application
