--- a/net/py-tldextract/Makefile
+++ b/net/py-tldextract/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2017/10/28 06:54:23 adam Exp $
+# $NetBSD: Makefile,v 1.4 2019/03/06 08:48:31 adam Exp $
 
-DISTNAME=	tldextract-2.2.0
+DISTNAME=	tldextract-2.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/tldextract/}
@@ -13,17 +13,18 @@ LICENSE=	modified-bsd
 DEPENDS+=	${PYPKGPREFIX}-idna-[0-9]*:../../www/py-idna
 DEPENDS+=	${PYPKGPREFIX}-requests>=2.1.0:../../devel/py-requests
 DEPENDS+=	${PYPKGPREFIX}-requests-file>=1.4:../../devel/py-requests-file
-# TEST_DEPENDS: not explicitly declated in requirements
-BUILD_DEPENDS+=	${PYPKGPREFIX}-responses-[0-9]*:../../net/py-responses
-BUILD_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
+DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TEST_DEPENDS+=	${PYPKGPREFIX}-responses-[0-9]*:../../net/py-responses
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 
 USE_LANGUAGES=	# none
 
 post-install:
-	cd ${DESTDIR}${PREFIX}/bin && ${MV} tldextract tldextract${PYVERSSUFFIX} || ${TRUE}
+	cd ${DESTDIR}${PREFIX}/bin && \
+	${MV} tldextract tldextract-${PYVERSSUFFIX} || ${TRUE}
 
 do-test:
-	cd ${WRKSRC} && py.test-${PYVERSSUFFIX}
+	cd ${WRKSRC} && py.test-${PYVERSSUFFIX} tests
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
