--- a/www/py-uwsgi/Makefile
+++ b/www/py-uwsgi/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.42 2019/02/27 12:15:54 adam Exp $
+# $NetBSD: Makefile,v 1.43 2019/03/06 13:07:58 joerg Exp $
 
 DISTNAME=	uwsgi-2.0.18
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=u/uWSGI/}
+DISTFILES=	${DEFAULT_DISTFILES}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://uwsgi-docs.readthedocs.io/
@@ -18,7 +19,7 @@ EGG_NAME=	${DISTNAME:S/uwsgi/uWSGI/}
 .include "options.mk"
 
 INSTALL_ENV+=		UWSGI_INCLUDES=${PREFIX}/include
-INSTALL_ENV+=		UWSGI_PROFILE_OVERRIDE="${UWSGI_DEBUG};${UWSGI_JSON};${UWSGI_PCRE};${UWSGI_SSL};${UWSGI_UUID};${UWSGI_XML};${UWSGI_YAML}"
+INSTALL_ENV+=		UWSGI_PROFILE_OVERRIDE="${UWSGI_DEBUG};${UWSGI_JSON};${UWSGI_PCRE};${UWSGI_SSE};${UWSGI_SSL};${UWSGI_UUID};${UWSGI_XML};${UWSGI_YAML}"
 INSTALLATION_DIRS+=	share/examples/${PYPKGPREFIX}-uwsgi
 
 post-install:
