--- a/x11/xf86-video-amdgpu/Makefile
+++ b/x11/xf86-video-amdgpu/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2018/09/16 20:34:39 triaxx Exp $
+# $NetBSD: Makefile,v 1.16 2019/03/06 14:00:30 wiz Exp $
 
-DISTNAME=	xf86-video-amdgpu-18.1.0
+DISTNAME=	xf86-video-amdgpu-19.0.0
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=driver/}
 EXTRACT_SUFX=	.tar.bz2
